# real-estate-market-analysis

./: .env.example  .gitignore  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  test.yml
config/: config.yaml  logging_config.yaml  model_params.yaml
data/processed/: customers_cleaned.csv  merged_real_estate.csv  properties_cleaned.csv
docker/: Dockerfile  Dockerfile.api  Dockerfile.frontend  docker-compose.yml
notebooks/: 01_task1_preprocessing.ipynb  02_task2_descriptive_stats.ipynb  03_task3_age_price_analysis.ipynb  04_task4_visualizations.ipynb
reports/: age_price_analysis.csv  building_averages.csv  building_totals.csv  correlation_results.csv  country_stats.csv  price_bin_stats.csv  state_stats.csv
requirements/: base.txt  dev.txt  prod.txt
scripts/: run_pipeline.py  train_models.py
src/: __init__.py
src/analysis/: correlation_analysis.py  descriptive_stats.py  geospatial.py  hypothesis_tests.py  insights.py  statistical_tests.py
src/api/: app.py  endpoints.py  schemas.py
src/data/: cleaner.py  loader.py  preprocessor.py  validator.py
src/explainability/: shap_explainer.py
src/features/: age_binner.py  build_features.py  price_binner.py
src/frontend/: index.html
src/models/: customer_segmentation.py  location_segmentation.py  price_classifier.py  price_predictor.py  satisfaction_classifier.py  time_series_forecast.py
tests/: test_analysis.py  test_api.py  test_cleaner.py  test_explainability.py  test_features.py  test_loader.py  test_models.py  test_preprocessor.py  test_simple.py
(+4 files in other folders)
